--- a/public/assets/css/crud.css
+++ b/public/assets/css/crud.css
@@ -288,3 +288,16 @@ body {
   #addButton:hover{
     background-color:  #8a9edb
   }
+
+  #download-excel:hover{
+    /* make it darker */
+    background: rgb(33, 130, 33);
+    border: rgb(33, 130, 33);
+  }
+
+  #download-excel{
+    display: flex !important;
+    align-items: center;
+    background: rgb(43, 170, 43);
+    border: rgb(43, 170, 43);
+  }
